Implementing GTD and Limit